# vgc-analytics

./: .dockerignore  .gitignore  BENCHMARKS.md  Dockerfile  README.md  dev.command  pyproject.toml  render.yaml  run.command
docs/: data-privacy.md  render-service-previews.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: pokemon-images.json
frontend/src/: App.tsx  api.ts  format.test.ts  format.ts  mobileLayout.test.ts  pokemonData.test.ts  pokemonData.ts  styles.css  types.ts
frontend/src/components/: AppHeader.tsx  ConditionFilters.tsx  Modal.tsx  PokemonDataLabel.tsx  PokemonPicker.tsx  PokemonSprite.test.tsx  PokemonSprite.tsx
frontend/src/features/analysis/: AnalysisPage.tsx  ConditionDrawer.tsx  ModeSwitch.test.tsx  ModeSwitch.tsx  ResultsPanel.tsx  TeamPanel.tsx  analysisState.ts
frontend/src/features/teams/: ConditionDialog.tsx  TeamResults.tsx  TeamSetCard.tsx  TeamsPage.tsx  compareVariants.test.ts  compareVariants.ts
frontend/src/hooks/: useCatalog.ts  useSettings.ts  useStoredState.ts
scripts/: anonymize_seed.py  generate_preview_fixture.py  pseudonymize_seed.py
src/vgc_analytics/: __init__.py  app.py  cli.py  database.py  engine.py  ingest.py  privacy.py  schema.sql  sync.py  validate.py
src/vgc_analytics/static/: index.html
src/vgc_analytics/static/assets/: index-3iFNLc6c.css  index-4mLplxQo.js  index-B4ihkjtC.js  index-BDuj7X-T.css  index-BawcIP29.js  (+25 more)
tests/: conftest.py  test_api.py  test_cli.py  test_engine.py  test_privacy.py  test_read_only_preview.py  test_sync.py
