[project]
name = "vgc-analytics"
version = "0.1.0"
description = "Deterministic VGC Regulation M-B matchup analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.5.4,<1.6",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pyarrow>=20,<24",
  "uvicorn>=0.35,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<10",
]

[project.scripts]
vgc-analytics = "vgc_analytics.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vgc_analytics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
